<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/archiveTab_ID"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.taras.threetabsapp.ArchiveTab">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/linear_searchUploadArchive_ID"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <EditText
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/edit_UploadArchive_ID"
            android:hint="@string/hint_editArchiveTab_upload"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_upload"
        android:id="@+id/btn_UploadArchive_ID"
        android:layout_alignBaseline="@+id/btn_unzipArchive_ID"
        android:layout_alignBottom="@+id/btn_unzipArchive_ID"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp" />

    <Button
        android:id="@+id/btn_unzipArchive_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/btn_unZipArchive"
        android:layout_below="@+id/linear_searchUploadArchive_ID"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="55dp" />

</RelativeLayout>