<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/geographicTab_ID"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.taras.threetabsapp.SQLTabList">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/linear_searchInBase_ID"
        android:orientation="horizontal"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_marginStart="10dp"
            android:id="@+id/edit_SearchFieldInBase_ID"
            android:hint="@string/hint_editSqlTab_add"
            android:layout_width="280dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_add_to_list"
            android:id="@+id/btn_AddToList_ID"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/linear_searchInList_ID"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_editSqlTab_search_in_list"
            android:id="@+id/autoCTW_ID"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listView_GeoTab_ID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_searchInList_ID"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear_searchInBase_ID" />

</RelativeLayout>